--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 :root {
 	--width-min: 828px;
 	--width-max: 1242px;
+	--clr-text: #183535;
+	--clr-appleGreen: #00f000;
+	--clr-appleAmberDark: #f0a400;
+	--clr-appleAmberLight: #f0c000;
 }
 
 html {
@@ -14,42 +18,221 @@ html {
 	box-sizing: inherit;
 }
 body {
-	font-family: sans-serif;
+	font-family: monospace;
+	height: 100vh;
+	background: rgb(62, 62, 62);
+	background: radial-gradient(circle, rgba(62, 62, 62, 1) 0%, rgba(7, 7, 7, 1) 100%);
+	/* background-color: #000000;
+	background-image: linear-gradient(0deg, #000000 0%, #434343 74%); */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.container-all {
+	display: grid;
+	grid-template-rows: 15% 85%;
+	grid-template-areas:
+		'header'
+		'main';
 	width: clamp(var(--width-min), 76.4vw, var(--width-max));
 	height: 100vh;
 }
-h1 {
-	color: darkgreen;
+
+button {
+	font-family: monospace;
+	outline: none;
+	border: 1px solid var(--clr-appleGreen);
+	color: var(--clr-appleGreen);
+	background-color: transparent;
+	border-radius: 5px;
+	cursor: pointer;
 }
+
+/* header */
+header {
+	grid-area: header;
+	width: clamp(var(--width-min), 76.4vw, var(--width-max));
+	outline: 1px solid gainsboro;
+}
+
+h1 {
+	color: var(--clr-appleAmberDark);
+	font-size: 4rem;
+	text-transform: uppercase;
+	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+/* main */
+
 main {
+	grid-area: main;
+	display: flex;
+	flex-direction: column;
+	width: clamp(var(--width-min), 76.4vw, var(--width-max));
+	outline: 1px solid tan;
+}
+.greetings {
+	color: var(--clr-appleGreen);
+	font-size: 1.3rem;
+	padding: 0px 2rem;
+	width: clamp(var(--width-min), 76.4vw, var(--width-max));
+
+	/* white-space: nowrap;
+	margin: 0px auto;
+	letter-spacing: 0.15em;
+	overflow: hidden;
+	border-right: 0.15em solid var(--clr-appleGreen);
+	animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite; */
+}
+/* 
+@keyframes typing {
+	from {
+		width: 0;
+	}
+	to {
+		width: 100%;
+	}
+}
+
+@keyframes blink-caret {
+	from,
+	to {
+		border-color: transparent;
+	}
+	50% {
+		border-color: var(--clr-appleGreen);
+	}
+} */
+
+#form-name {
+	margin-top: 2rem;
+	outline: 1px solid darkblue;
+	height: 4rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#input-name {
+	margin-right: 3rem;
+	height: 3rem;
+	width: 23rem;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+	background-color: aliceblue;
+	color: var(--clr-text);
+	font-size: 1.5rem;
+	padding-left: 1rem;
+}
+.bttn-name {
+	height: 3rem;
+	width: 7rem;
+	font-size: 2rem;
+	cursor: pointer;
+}
+/*  */
+/* ship buttons */
+.shipBttns-wrapper {
+	outline: 1px solid darkgreen;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	height: 30rem;
-	outline: 1px solid tan;
 }
 
-/*  */
-/*  */
+.shipsBttn-container {
+	width: 100%;
+	height: 5rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0px 2rem;
+	margin-top: 0.5rem;
+	flex-wrap: wrap;
+}
+
+.bttn-carrier,
+.bttn-battleship,
+.bttn-destroyer,
+.bttn-frigate {
+	width: 7rem;
+	height: 3rem;
+	font-size: 1rem;
+}
+
+.bttn-superdreadnought {
+	width: 13rem;
+	height: 3rem;
+	font-size: 1rem;
+}
+
+.bttn-axisSelector,
+.bttn-startGame {
+	align-self: center;
+	margin-top: 1rem;
+	margin-bottom: 0.5rem;
+	width: 10rem;
+	height: 3rem;
+	font-size: 1rem;
+}
+
+.bttn-startGame {
+	font-size: 2rem;
+}
+
+/* info screen battle */
+
+.infoScreen-wrapper {
+	width: clamp(var(--width-min), 76.4vw, var(--width-max));
+	height: 20rem;
+	outline: 1px solid darkgoldenrod;
+	overflow-y: scroll;
+	scroll-behavior: smooth;
+}
+
+/* player board */
+
+.playerBoard-wrapper {
+	outline: 1px solid darkmagenta;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
 .playerBoard-container {
-	width: 20rem;
-	height: 20rem;
-	outline: 1px solid darkblue;
+	width: 25rem;
+	height: 25rem;
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
 	grid-template-rows: repeat(10, 1fr);
 }
 .player-gameCell {
-	border: 1px solid darkcyan;
+	border: 1px solid var(--clr-appleGreen);
+	color: gainsboro;
+	text-align: center;
+	display: grid;
+	place-content: center;
+	font-size: 1.5em;
+	font-weight: 700;
 }
 
-/*  */
-/*  */
+/* comp board */
+
+.compBoard-wrapper {
+	outline: 1px solid gainsboro;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .compBoard-container {
 	margin-top: 2rem;
-	width: 20rem;
-	height: 20rem;
+	width: 25rem;
+	height: 25rem;
 	outline: 1px solid grey;
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
@@ -57,4 +240,9 @@ main {
 }
 .comp-gameCell {
 	border: 1px solid gray;
+	color: gainsboro;
+	display: grid;
+	place-content: center;
+	font-weight: 700;
+	font-size: 1.5em;
 }
