--- a/src/index.css
+++ b/src/index.css
@@ -117,11 +117,11 @@ main {
 	margin-right: 3rem;
 	height: 3rem;
 	width: 23rem;
-	border: none;
+	border: 1px solid var(--clr-appleGreen);
 	outline: none;
 	border-radius: 5px;
-	background-color: aliceblue;
-	color: var(--clr-text);
+	background-color: transparent;
+	color: var(--clr-appleGreen);
 	font-size: 1.5rem;
 	padding-left: 1rem;
 }
@@ -134,6 +134,8 @@ main {
 /*  */
 /* ship buttons */
 .shipBttns-wrapper {
+	width: 100%;
+	height: 13rem;
 	outline: 1px solid darkgreen;
 	display: flex;
 	flex-direction: column;
@@ -141,8 +143,6 @@ main {
 }
 
 .shipsBttn-container {
-	width: 100%;
-	height: 5rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -158,6 +158,7 @@ main {
 	width: 7rem;
 	height: 3rem;
 	font-size: 1rem;
+	/* cursor: crosshair; */
 }
 
 .bttn-superdreadnought {
@@ -178,16 +179,21 @@ main {
 
 .bttn-startGame {
 	font-size: 2rem;
+	margin-top: 2rem;
 }
 
 /* info screen battle */
 
 .infoScreen-wrapper {
 	width: clamp(var(--width-min), 76.4vw, var(--width-max));
-	height: 20rem;
+	height: 29rem;
 	outline: 1px solid darkgoldenrod;
 	overflow-y: scroll;
 	scroll-behavior: smooth;
+}
+
+.battleMessageElem {
+	color: var(--clr-appleGreen);
 }
 
 /* player board */
@@ -207,6 +213,7 @@ main {
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
 	grid-template-rows: repeat(10, 1fr);
+	border: 1px solid var(--clr-appleGreen);
 }
 .player-gameCell {
 	border: 1px solid var(--clr-appleGreen);
@@ -233,16 +240,46 @@ main {
 	margin-top: 2rem;
 	width: 25rem;
 	height: 25rem;
-	outline: 1px solid grey;
+	border: 1px solid var(--clr-appleGreen);
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
 	grid-template-rows: repeat(10, 1fr);
 }
 .comp-gameCell {
-	border: 1px solid gray;
+	border: 1px solid var(--clr-appleGreen);
 	color: gainsboro;
 	display: grid;
 	place-content: center;
 	font-weight: 700;
 	font-size: 1.5em;
+}
+
+@media only screen and (min-width: 1242px) {
+	.main {
+		grid-area: main;
+		width: clamp(var(--width-min), 76.4vw, var(--width-max));
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: calc(76.4% * 0.85) calc(24.6% * 0.85);
+		grid-template-areas:
+			'playerBoard compBoard'
+			'infoScreen infoScreen';
+	}
+
+	.playerBoard-wrapper {
+		grid-area: playerBoard;
+	}
+
+	.compBoard-wrapper {
+		grid-area: compBoard;
+	}
+
+	.compBoard-container {
+		margin-bottom: 31px;
+	}
+
+	.infoScreen-wrapper {
+		grid-area: infoScreen;
+		height: calc(1004.5px - 652.017px);
+	}
 }
