--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ main {
 }
 .greetings {
 	color: var(--clr-appleGreen);
-	font-size: 1.3rem;
+	font-size: 1rem;
 	padding: 0px 2rem;
 	width: clamp(var(--width-min), 76.4vw, var(--width-max));
 }
@@ -177,8 +177,14 @@ main {
 	padding: 2rem;
 }
 
+.preBattle-infoScreen {
+	overflow-y: hidden;
+	height: 31rem;
+	font-size: 1.25rem;
+}
+
 .battleMessageElem {
-	font-size: 1.5rem;
+	font-size: 1.25rem;
 	color: var(--clr-appleGreen);
 }
 
