--- a/src/index.css
+++ b/src/index.css
@@ -97,7 +97,7 @@ main {
 }
 .greetings {
 	color: var(--clr-appleGreen);
-	font-size: 1rem;
+	font-size: 1.5rem;
 	padding: 0px 2rem;
 	width: clamp(var(--width-min), 76.4vw, var(--width-max));
 }
@@ -190,20 +190,20 @@ main {
 /* info screen battle */
 .infoScreen-wrapper {
 	width: clamp(var(--width-min), 76.4vw, var(--width-max));
-	height: 31rem;
+	height: 33rem;
 	overflow-y: scroll;
 	scroll-behavior: smooth;
 	padding: 2rem;
 }
 
-.preBattle-infoScreen {
+.infoScreen-preBattleMssg {
 	overflow-y: hidden;
-	height: 31rem;
-	font-size: 1.15rem;
+	font-size: 1.2rem;
+	color: var(--clr-appleGreen);
 }
 
 .battleMessageElem {
-	font-size: 1rem;
+	font-size: 1.2rem;
 	color: var(--clr-appleGreen);
 }
 
@@ -324,9 +324,10 @@ main {
 		width: clamp(var(--width-min), 76.4vw, var(--width-max));
 		overflow-y: scroll;
 		scroll-behavior: smooth;
+		height: 33rem;
 	}
 
 	.battleMessageElem {
-		font-size: 1.5rem;
+		font-size: 1.2rem;
 	}
 }
