--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,17 @@
 :root {
-	--width-min: 828px;
-	--width-max: 1242px;
-	--clr-text: #183535;
-	--clr-appleGreen: #00f000;
-	--clr-appleAmberDark: #f0a400;
-	--clr-appleAmberLight: #f0c000;
+	--width-min: 350px;
+	--width-max: 1200px;
+	--padding-x: 1rem;
+	--padding-y: 2rem;
+
+	--border-radius: 5px;
+	--input-height: 3rem;
+	--bttn-width: 7rem;
+
+	--colour-text: #183535;
+	--colour-appleGreen: #00f000;
+	--colour-appleAmberDark: #f0a400;
+	--colour-appleAmberLight: #f0c000;
 }
 
 html {
@@ -17,159 +24,220 @@ html {
 *::after {
 	box-sizing: inherit;
 }
+
+a {
+	text-decoration: none;
+	color: var(--colour-appleAmberDark);
+}
+
+button {
+	font-family: monospace;
+
+	border: 1px solid var(--colour-appleGreen);
+	color: var(--colour-appleGreen);
+	background-color: transparent;
+	border-radius: 5px;
+	cursor: pointer;
+}
+button:hover {
+	border: 1px solid var(--colour-appleAmberDark);
+	color: var(--colour-appleAmberDark);
+}
+
+h1 {
+	color: var(--colour-appleAmberDark);
+	/* font-size: 4rem; */
+	font-size: clamp(2rem, 10vw, 4rem);
+	text-transform: uppercase;
+	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
 body {
 	font-family: monospace;
-	height: 100vh;
+	/* height: 100vh; */
 	background: rgb(62, 62, 62);
 	background: radial-gradient(circle, rgba(62, 62, 62, 1) 0%, rgba(7, 7, 7, 1) 100%);
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-a {
-	text-decoration: none;
-	color: var(--clr-appleAmberDark);
+	height: 100%;
+	/* outline: 1px solid sandybrown; */
+	/* overflow-x: hidden; */
+	/* width: clamp(var(--width-min), auto, var(--width-max)); */
 }
 
 .container-all {
-	display: grid;
+	/* display: grid;
 	grid-template-rows: 10% 90%;
 	grid-template-areas:
 		'header'
 		'main';
 	width: clamp(var(--width-min), 76.4vw, var(--width-max));
 	height: 100vh;
-	border: 1px solid var(--clr-appleGreen);
-}
-
-button {
-	font-family: monospace;
-	outline: none;
-	border: 1px solid var(--clr-appleGreen);
-	color: var(--clr-appleGreen);
-	background-color: transparent;
-	border-radius: 5px;
-	cursor: pointer;
-}
-button:hover {
-	border: 1px solid var(--clr-appleAmberDark);
-	color: var(--clr-appleAmberDark);
-}
-
-/* header */
-header {
-	grid-area: header;
-	width: clamp(var(--width-min), 76.4vw, var(--width-max));
+	border: 1px solid var(--colour-appleGreen); */
+	/* display: grid;
+	grid-template-rows: 15% 85%;
+	grid-template-areas:
+		'header'
+		'main'; */
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
+	margin-left: auto;
+	margin-right: auto;
+	width: clamp(var(--width-min), 90vw, var(--width-max));
+	/* height: clamp(var(--height-min), 900px, var(--height-max)); */
+	/* border: 1px solid var(--colour-appleGreen); */
+	padding: var(--padding-y) var(--padding-x);
+	outline: 1px solid sandybrown;
+	/* height: 100vh; */
+	/* overflow-x: hidden; */
 }
 
-.header-container {
+/* header */
+.header {
+	/* grid-area: header; */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
+
+/* .header-container {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-}
+} */
 
-.links {
-	margin-right: 2rem;
-	width: 17rem;
+.header__links {
+	width: 100%;
 	display: flex;
-	justify-content: space-between;
-	font-size: 1rem;
-}
+	flex-wrap: wrap;
+	justify-content: center;
+	column-gap: 3rem;
+	align-items: center;
 
-h1 {
-	color: var(--clr-appleAmberDark);
-	font-size: 4rem;
-	text-transform: uppercase;
-	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-	padding-left: 2rem;
+	font-size: clamp(1rem, 3vw, 1.25rem);
 }
 
 /* main */
-main {
-	grid-area: main;
+.main {
+	/* grid-area: main; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+}
+
+.greetings-container {
 	display: flex;
 	flex-direction: column;
-	width: clamp(var(--width-min), 76.4vw, var(--width-max));
+	justify-content: center;
+	align-items: center;
 }
+
 .greetings {
-	color: var(--clr-appleGreen);
-	font-size: 1.5rem;
-	padding: 0px 2rem;
-	width: clamp(var(--width-min), 76.4vw, var(--width-max));
+	color: var(--colour-appleGreen);
+	font-size: clamp(1rem, 3vw, 1.5rem);
+	width: 100%;
 }
 
 #form-name {
-	margin-top: 2rem;
+	/* margin-top: 2rem;
 	height: 4rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;	 */
+	margin-top: var(--padding-y);
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	justify-content: space-between;
+	align-items: center;
 }
+
+.form__input {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 #input-name {
-	margin-right: 3rem;
-	height: 3rem;
-	width: 23rem;
-	border: 1px solid var(--clr-appleGreen);
-	outline: none;
+	/* margin-right: 3rem;
+	height: 3rem;	
+	width: clamp(20rem, 50vw, 23rem);
+	border: 1px solid var(--colour-appleGreen);
+	
 	border-radius: 5px;
 	background-color: transparent;
-	color: var(--clr-appleGreen);
+	color: var(--colour-appleGreen);
 	font-size: 1.5rem;
-	padding-left: 1rem;
+	padding-left: 1rem; */
+	height: var(--input-height);
+	width: clamp(18rem, 50vw, 23rem);
+	border: 1px solid var(--colour-appleGreen);
+
+	border-radius: var(--border-radius);
+	background-color: transparent;
+	color: var(--colour-appleGreen);
+	padding-left: var(--padding-x);
+	font-size: clamp(1rem, 3vw, 1.5rem);
 }
 
 .bttn-name {
-	height: 3rem;
-	width: 7rem;
-	font-size: 2rem;
+	height: var(--input-height);
+	width: var(--bttn-width);
+	font-size: clamp(1rem, 3vw, 1.5rem);
 	cursor: pointer;
 }
 
 /* ship buttons */
 .shipBttns-wrapper {
-	width: 100%;
-	height: 13rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	width: 100%;
+	outline: 1px solid salmon;
+	margin-top: var(--padding-y);
+	gap: 1rem;
 }
 
 .shipsBttn-container {
+	outline: 1px solid turquoise;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+	gap: 1rem;
 	align-items: center;
-	padding: 0px 2rem;
-	margin-top: 0.5rem;
 	flex-wrap: wrap;
+	/* margin-top: 0.5rem; */
 }
 
 .bttn-carrier,
 .bttn-battleship,
 .bttn-destroyer,
 .bttn-frigate {
-	width: 7rem;
-	height: 3rem;
+	width: var(--bttn-width);
+	height: var(--input-height);
 	font-size: 1rem;
 }
 
 .bttn-superdreadnought {
 	width: 13rem;
-	height: 3rem;
+	height: var(--input-height);
 	font-size: 1rem;
 }
 
 .bttn-axisSelector,
 .bttn-startGame {
 	align-self: center;
-	margin-top: 1rem;
 	margin-bottom: 0.5rem;
 	width: 10rem;
-	height: 3rem;
+	height: var(--input-height);
 	font-size: 1rem;
 }
 
@@ -179,53 +247,65 @@ main {
 }
 
 .bothBoards-container {
+	margin-top: 2rem;
+	outline: 1px solid aquamarine;
 	display: flex;
-	height: 35rem;
+	justify-content: center;
+	align-items: center;
+
+	flex-wrap: wrap;
+	/* height: 35rem; */
+	width: 100%;
+	gap: 2rem;
 }
 
 .compBoard-container {
 	margin-bottom: 31px;
+	outline: 1px solid salmon;
 }
 
 /* info screen battle */
 .infoScreen-wrapper {
-	width: clamp(var(--width-min), 76.4vw, var(--width-max));
-	height: 33rem;
+	margin-top: 2rem;
+	width: 100%;
+	height: 25rem;
 	overflow-y: scroll;
 	scroll-behavior: smooth;
-	padding: 2rem;
+	/* padding: 2rem; */
 }
 
 .infoScreen-preBattleMssg {
 	overflow-y: hidden;
 	font-size: 1.2rem;
-	color: var(--clr-appleGreen);
+	color: var(--colour-appleGreen);
 }
 
 .battleMessageElem {
 	font-size: 1.2rem;
-	color: var(--clr-appleGreen);
+	color: var(--colour-appleGreen);
 }
 
 /* player board */
 .playerBoard-wrapper {
-	width: 100%;
-	height: 100%;
+	/* width: 100%; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	outline: 1px solid firebrick;
 }
 
 .playerBoard-container {
-	width: 25rem;
-	height: 25rem;
+	/* width: 25rem;
+	height: 25rem; */
+	width: clamp(20rem, 50vw, 30rem);
+	height: clamp(20rem, 50vw, 30rem);
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
 	grid-template-rows: repeat(10, 1fr);
-	border: 1px solid var(--clr-appleGreen);
+	border: 1px solid var(--colour-appleGreen);
 }
 .player-gameCell {
-	border: 1px solid var(--clr-appleGreen);
+	border: 1px solid var(--colour-appleGreen);
 	color: gainsboro;
 	text-align: center;
 	display: grid;
@@ -236,8 +316,8 @@ main {
 
 /* comp board */
 .compBoard-wrapper {
-	width: 100%;
-	height: 100%;
+	/* width: 100%;
+	height: 100%; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -245,16 +325,18 @@ main {
 
 .compBoard-container {
 	margin-top: 2rem;
-	width: 25rem;
-	height: 25rem;
-	border: 1px solid var(--clr-appleGreen);
+	/* width: 25rem;
+	height: 25rem; */
+	width: clamp(20rem, 50vw, 30rem);
+	height: clamp(20rem, 50vw, 30rem);
+	border: 1px solid var(--colour-appleGreen);
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
 	grid-template-rows: repeat(10, 1fr);
 }
 
 .comp-gameCell {
-	border: 1px solid var(--clr-appleGreen);
+	border: 1px solid var(--colour-appleGreen);
 	color: gainsboro;
 	display: grid;
 	place-content: center;
@@ -264,25 +346,27 @@ main {
 
 .winner-container {
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
-	height: 7rem;
+	flex-wrap: wrap;
+	/* height: 7rem; */
+	outline: 1px solid gainsboro;
 }
 
 .bttn-restart {
-	width: 7rem;
-	height: 3rem;
+	width: var(--bttn-width);
+	height: var(--input-height);
 	font-size: 1.25rem;
-	margin-left: 2rem;
+	/* margin-left: 2rem; */
 }
 
 .winner-announcement {
-	margin-right: 2rem;
-	color: var(--clr-appleAmberDark);
+	/* margin-right: 2rem; */
+	color: var(--colour-appleAmberDark);
 	font-size: 1.5rem;
 }
 
-@media only screen and (min-width: 1242px) {
+/* @media only screen and (min-width: 1242px) {
 	.form-container {
 		position: absolute;
 		top: calc(50% - (64px / 2));
@@ -330,4 +414,4 @@ main {
 	.battleMessageElem {
 		font-size: 1.2rem;
 	}
-}
+} */
