--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,6 @@ a {
 
 button {
 	font-family: monospace;
-
 	border: 1px solid var(--colour-appleGreen);
 	color: var(--colour-appleGreen);
 	background-color: transparent;
@@ -46,7 +45,6 @@ button:hover {
 
 h1 {
 	color: var(--colour-appleAmberDark);
-	/* font-size: 4rem; */
 	font-size: clamp(2rem, 10vw, 4rem);
 	text-transform: uppercase;
 	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -54,32 +52,15 @@ h1 {
 
 body {
 	font-family: monospace;
-	/* height: 100vh; */
 	background: rgb(62, 62, 62);
 	background: radial-gradient(circle, rgba(62, 62, 62, 1) 0%, rgba(7, 7, 7, 1) 100%);
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100%;
-	/* outline: 1px solid sandybrown; */
-	/* overflow-x: hidden; */
-	/* width: clamp(var(--width-min), auto, var(--width-max)); */
 }
 
 .container-all {
-	/* display: grid;
-	grid-template-rows: 10% 90%;
-	grid-template-areas:
-		'header'
-		'main';
-	width: clamp(var(--width-min), 76.4vw, var(--width-max));
-	height: 100vh;
-	border: 1px solid var(--colour-appleGreen); */
-	/* display: grid;
-	grid-template-rows: 15% 85%;
-	grid-template-areas:
-		'header'
-		'main'; */
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -87,29 +68,18 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	width: clamp(var(--width-min), 90vw, var(--width-max));
-	/* height: clamp(var(--height-min), 900px, var(--height-max)); */
-	/* border: 1px solid var(--colour-appleGreen); */
 	padding: var(--padding-y) var(--padding-x);
-	outline: 1px solid sandybrown;
-	/* height: 100vh; */
-	/* overflow-x: hidden; */
 }
 
 /* header */
 .header {
-	/* grid-area: header; */
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
+	padding-bottom: var(--padding-y);
 }
-
-/* .header-container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-} */
 
 .header__links {
 	width: 100%;
@@ -118,13 +88,11 @@ body {
 	justify-content: center;
 	column-gap: 3rem;
 	align-items: center;
-
 	font-size: clamp(1rem, 3vw, 1.25rem);
 }
 
 /* main */
 .main {
-	/* grid-area: main; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -146,12 +114,6 @@ body {
 }
 
 #form-name {
-	/* margin-top: 2rem;
-	height: 4rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;	 */
 	margin-top: var(--padding-y);
 	display: flex;
 	flex-direction: column;
@@ -167,25 +129,19 @@ body {
 }
 
 #input-name {
-	/* margin-right: 3rem;
-	height: 3rem;	
-	width: clamp(20rem, 50vw, 23rem);
-	border: 1px solid var(--colour-appleGreen);
-	
-	border-radius: 5px;
-	background-color: transparent;
-	color: var(--colour-appleGreen);
-	font-size: 1.5rem;
-	padding-left: 1rem; */
 	height: var(--input-height);
 	width: clamp(18rem, 50vw, 23rem);
 	border: 1px solid var(--colour-appleGreen);
-
 	border-radius: var(--border-radius);
 	background-color: transparent;
-	color: var(--colour-appleGreen);
+	color: var(--colour-appleAmberDark);
 	padding-left: var(--padding-x);
 	font-size: clamp(1rem, 3vw, 1.5rem);
+}
+
+#input-name:focus {
+	outline: 1px solid var(--colour-appleAmberDark);
+	border: none;
 }
 
 .bttn-name {
@@ -202,19 +158,16 @@ body {
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-	outline: 1px solid salmon;
 	margin-top: var(--padding-y);
 	gap: 1rem;
 }
 
 .shipsBttn-container {
-	outline: 1px solid turquoise;
 	display: flex;
 	justify-content: center;
 	gap: 1rem;
 	align-items: center;
 	flex-wrap: wrap;
-	/* margin-top: 0.5rem; */
 }
 
 .bttn-carrier,
@@ -248,20 +201,16 @@ body {
 
 .bothBoards-container {
 	margin-top: 2rem;
-	outline: 1px solid aquamarine;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
 	flex-wrap: wrap;
-	/* height: 35rem; */
 	width: 100%;
 	gap: 2rem;
 }
 
 .compBoard-container {
 	margin-bottom: 31px;
-	outline: 1px solid salmon;
 }
 
 /* info screen battle */
@@ -271,7 +220,6 @@ body {
 	height: 25rem;
 	overflow-y: scroll;
 	scroll-behavior: smooth;
-	/* padding: 2rem; */
 }
 
 .infoScreen-preBattleMssg {
@@ -287,16 +235,12 @@ body {
 
 /* player board */
 .playerBoard-wrapper {
-	/* width: 100%; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	outline: 1px solid firebrick;
 }
 
 .playerBoard-container {
-	/* width: 25rem;
-	height: 25rem; */
 	width: clamp(20rem, 50vw, 30rem);
 	height: clamp(20rem, 50vw, 30rem);
 	display: grid;
@@ -316,8 +260,6 @@ body {
 
 /* comp board */
 .compBoard-wrapper {
-	/* width: 100%;
-	height: 100%; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -325,8 +267,7 @@ body {
 
 .compBoard-container {
 	margin-top: 2rem;
-	/* width: 25rem;
-	height: 25rem; */
+
 	width: clamp(20rem, 50vw, 30rem);
 	height: clamp(20rem, 50vw, 30rem);
 	border: 1px solid var(--colour-appleGreen);
@@ -349,69 +290,15 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	/* height: 7rem; */
-	outline: 1px solid gainsboro;
 }
 
 .bttn-restart {
 	width: var(--bttn-width);
 	height: var(--input-height);
 	font-size: 1.25rem;
-	/* margin-left: 2rem; */
 }
 
 .winner-announcement {
-	/* margin-right: 2rem; */
 	color: var(--colour-appleAmberDark);
 	font-size: 1.5rem;
 }
-
-/* @media only screen and (min-width: 1242px) {
-	.form-container {
-		position: absolute;
-		top: calc(50% - (64px / 2));
-		left: calc(50% - (528px / 2));
-	}
-
-	.main {
-		grid-area: main;
-		width: clamp(var(--width-min), 76.4vw, var(--width-max));
-		display: flex;
-		flex-direction: column;
-	}
-
-	.shipBttns-wrapper {
-		grid-area: buttons;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-evenly;
-	}
-
-	.shipsBttn-container {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
-
-	.bothBoards-container {
-		grid-area: bothBoards;
-		display: flex;
-		height: 35rem;
-	}
-
-	.compBoard-container {
-		margin-bottom: 31px;
-	}
-
-	.infoScreen-wrapper {
-		grid-area: infoScreen;
-		width: clamp(var(--width-min), 76.4vw, var(--width-max));
-		overflow-y: scroll;
-		scroll-behavior: smooth;
-		height: 33rem;
-	}
-
-	.battleMessageElem {
-		font-size: 1.2rem;
-	}
-} */
