--- a/src/index.css
+++ b/src/index.css
@@ -300,5 +300,5 @@ body {
 
 .winner-announcement {
 	color: var(--colour-appleAmberDark);
-	font-size: 1.5rem;
+	font-size: clamp(1rem, 3vw, 1.5rem);
 }
