--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
 	--width-min: 350px;
-	--width-max: 1200px;
+	--width-max: 1800px;
 	--padding-x: 1rem;
 	--padding-y: 2rem;
 
@@ -62,6 +62,7 @@ body {
 
 .container-all {
 	display: flex;
+	flex-wrap: wrap;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
@@ -96,7 +97,8 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
+	/* flex-direction: column; */
+	flex-wrap: wrap;
 	width: 100%;
 }
 
@@ -140,7 +142,6 @@ body {
 }
 
 #input-name:focus {
-	outline: 1px solid var(--colour-appleAmberDark);
 	border: none;
 }
 
@@ -205,8 +206,10 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
+	width: fit-content;
 	width: 100%;
 	gap: 2rem;
+	outline: 1px solid khaki;
 }
 
 .compBoard-container {
@@ -224,7 +227,7 @@ body {
 
 .infoScreen-preBattleMssg {
 	overflow-y: hidden;
-	font-size: 1.2rem;
+	font-size: clamp(1rem, 3vw, 1.5rem);
 	color: var(--colour-appleGreen);
 }
 
@@ -236,8 +239,13 @@ body {
 /* player board */
 .playerBoard-wrapper {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap-reverse;
+	gap: 2rem;
+	max-width: 1100px;
+	width: 100%;
+	outline: 1px solid saddlebrown;
 }
 
 .playerBoard-container {
@@ -258,16 +266,78 @@ body {
 	font-weight: 700;
 }
 
-/* comp board */
-.compBoard-wrapper {
+.tacticalOverview-wrapper {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: start;
+	flex-wrap: wrap;
+	width: clamp(23rem, 50vw, 29rem);
+	padding-bottom: var(--padding-y);
+	outline: 1px solid darkcyan;
+}
+
+.tacticalOverview-title {
+	font-size: clamp(1.25rem, 3vw, 1.5rem);
+	color: var(--colour-appleGreen);
+	text-align: center;
+}
+
+.shipName-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	outline: 1px solid hotpink;
+}
+
+.shipName-text {
+	font-size: clamp(0.75rem, 3vw, 1rem);
+	color: var(--colour-appleGreen);
+	padding-right: var(--padding-x);
+}
+
+.smallShips-container {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	flex-wrap: wrap;
+	outline: 1px solid lavender;
+}
+
+.tacticalCells-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-left: auto;
+}
+
+.player-tacticalCell,
+.comp-tacticalCell {
+	border: 1px solid var(--colour-appleGreen);
+	color: var(--colour-appleAmberDark);
+	width: clamp(2rem, 3vw, 3rem);
+	height: clamp(2rem, 3vw, 3rem);
+	text-align: center;
+	display: grid;
+	place-content: center;
+	font-size: 1.5em;
+	font-weight: 700;
+}
+
+.compBoard-wrapper {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+	gap: 2rem;
+	max-width: 1100px;
+	width: 100%;
+	outline: 1px solid cyan;
 }
 
 .compBoard-container {
 	margin-top: 2rem;
-
 	width: clamp(20rem, 50vw, 30rem);
 	height: clamp(20rem, 50vw, 30rem);
 	border: 1px solid var(--colour-appleGreen);
