--- a/src/index.css
+++ b/src/index.css
@@ -216,32 +216,23 @@ body {
 }
 
 /* info screen battle */
-/* .infoScreen-wrapper {
-	margin-top: 2rem;
-	width: 100%;
-	height: 25rem;
-	overflow-y: scroll;
-	scroll-behavior: smooth;
-} */
-
 .battleMessage-wrapper {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	padding-top: 2rem;
 	flex-wrap: wrap-reverse;
 	width: clamp(17rem, 50vw, 26rem);
 }
 
 .battleMessageTitleElem {
-	padding-top: 0.5rem;
+	padding-bottom: 1.5rem;
 	font-size: clamp(1rem, 3vw, 1.5rem);
 	color: var(--colour-appleGreen);
 }
 
 .battleMessage-container {
-	/* margin-top: 2rem; */
-
 	height: 100vh;
 	overflow-y: scroll;
 	scroll-behavior: smooth;
@@ -339,7 +330,7 @@ body {
 	text-align: center;
 	display: grid;
 	place-content: center;
-	font-size: clamp(0.75rem, 3vw, 1.25rem);
+	font-size: clamp(0.75rem, 3vw, 1rem);
 	font-weight: 700;
 }
 
@@ -388,7 +379,7 @@ body {
 	text-align: center;
 	display: grid;
 	place-content: center;
-	font-size: clamp(0.75rem, 3vw, 1.25rem);
+	font-size: clamp(0.75rem, 3vw, 1rem);
 	font-weight: 700;
 }
 
