--- a/src/index.css
+++ b/src/index.css
@@ -97,18 +97,12 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	/* flex-direction: column; */
 	flex-wrap: wrap;
 	width: 100%;
 }
 
 .greetings-container {
-	/* display: flex;
-	justify-content: center; 
-	align-items: flex-start; 
-	flex-wrap: wrap; */
 	width: 100%;
-
 	height: 50vh;
 	overflow-y: scroll;
 	scroll-behavior: smooth;
@@ -232,15 +226,12 @@ body {
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	padding-top: 1.75rem;
+	/* padding-top: 1.75rem; */
 	flex-wrap: wrap-reverse;
 	width: clamp(21rem, 50vw, 27rem);
-	outline: 1px solid gray;
-	/* height: 62%; */
 }
 
 .battleMessageTitleElem {
-	/* padding-bottom: 1.5rem; */
 	font-size: clamp(1rem, 3vw, 1.5rem);
 	color: var(--colour-appleGreen);
 }
@@ -259,7 +250,6 @@ body {
 
 .infoScreen-container {
 	width: 100%;
-
 	height: 62vh;
 	overflow-y: scroll;
 	scroll-behavior: smooth;
@@ -286,7 +276,6 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	outline: 1px solid violet;
 }
 
 @media screen and (min-width: 1137px) {
@@ -321,15 +310,7 @@ body {
 }
 
 /* this is for board when game starts */
-.gamePlayerBoard-wrapper {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap-reverse;
-	gap: 2rem;
-	max-width: 1100px;
-}
-
+.gamePlayerBoard-wrapper,
 .compBoard-wrapper {
 	display: flex;
 	justify-content: center;
@@ -337,7 +318,6 @@ body {
 	flex-wrap: wrap-reverse;
 	gap: 2rem;
 	max-width: 1100px;
-	margin-top: 2rem;
 }
 
 .playerBoard-container,
@@ -368,7 +348,6 @@ body {
 	align-items: center;
 	flex-wrap: wrap;
 	width: clamp(21rem, 50vw, 27rem);
-	/* padding-bottom: var(--padding-y); */
 }
 
 .tacticalOverview-title {
@@ -409,34 +388,6 @@ body {
 	font-size: clamp(0.75rem, 3vw, 1rem);
 	font-weight: 700;
 }
-
-/* .compBoard-wrapper {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap-reverse;
-	gap: 2rem;
-	max-width: 1100px;
-	
-}
-
-.compBoard-container {
-	width: clamp(21rem, 50vw, 27rem);
-	height: clamp(21rem, 50vw, 27rem);
-	border: 1px solid var(--colour-appleGreen);
-	display: grid;
-	grid-template-columns: repeat(10, 1fr);
-	grid-template-rows: repeat(10, 1fr);
-}
-
-.comp-gameCell {
-	border: 1px solid var(--colour-appleGreen);
-	color: gainsboro;
-	display: grid;
-	place-content: center;
-	font-weight: 700;
-	font-size: 1.5em;
-} */
 
 .winner-container {
 	display: flex;
