add padding-bottom to battleMessageWrapper

--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,7 @@ body {
 	align-items: center;
 	flex-wrap: wrap-reverse;
 	width: clamp(23rem, 50vw, 29rem);
+	padding-bottom: var(--padding-y);
 }
 
 .battleMessageTitleElem {
